updating readme and fixing yesterday slides

--- a/LectureSeries-python1.ipynb
+++ b/LectureSeries-python1.ipynb
@@ -78,10 +78,12 @@
     "Python package manager.\n",
     "If pip exists in root (`which pip`) then need root access to use!\n",
     "Go over Monday's Lecture for local installations.\n",
-    " * search X\n",
-    " * install X\n",
-    " * uninstall X\n",
-    " * show X\n",
+    "`pip`\n",
+    " * `search X`\n",
+    " * `install X`\n",
+    " * `uninstall X`\n",
+    " * `show X`\n",
+    "\n",
     "Packages I suggest:\n",
     " * cython, mathplotlib, ipython, jupyter, numpy, scipy, sklearn, emcee"
    ]
@@ -208,7 +210,7 @@
       "[0, 1, 2, 3] <class 'list'>\n",
       "(0, 1, 2, 3) <class 'tuple'>\n",
       "{0, 1} <class 'set'>\n",
-      "<function <lambda> at 0x7f78e4507378> <class 'function'>\n",
+      "<function <lambda> at 0x7fe2c1daf620> <class 'function'>\n",
       "11 <class 'int'>\n"
      ]
     }
@@ -630,11 +632,11 @@
      "output_type": "stream",
      "text": [
       "[3, 6, 9]\n",
-      "Object: <function <lambda> at 0x7f78e4507d90>  With value at 3: 0\n",
+      "Object: <function <lambda> at 0x7fe2c1dafd90>  With value at 3: 0\n",
       "4\n",
-      "Object: <filter object at 0x7f78e44ce320>  With value: [3, 6, 9]\n",
-      "Object: <filter object at 0x7f78e44ce320>  With value: []\n",
-      "Object: <map object at 0x7f78e44ce518>  With value: ['3', '6', '9']\n"
+      "Object: <filter object at 0x7fe2c1573400>  With value: [3, 6, 9]\n",
+      "Object: <filter object at 0x7fe2c1573400>  With value: []\n",
+      "Object: <map object at 0x7fe2c15734a8>  With value: ['3', '6', '9']\n"
      ]
     }
    ],
@@ -671,15 +673,21 @@
     }
    },
    "source": [
-    "## List Arguments\n",
+    "## Function Arguments: List\n",
     "---\n",
-    "Namespace\n",
+    "Namespace Protection\n",
     "* Variables nested in functions are protected\n",
+    "  * ```python \n",
+    "  def func(a):\n",
+    "      a = 10\n",
+    "      print(a) \n",
+    "  a = 40\n",
+    "  print(a,' vs ', func(a))```\n",
     "\n",
     "Pointer Passing:\n",
-    " * Lists that are passed to a function can change inside that function\n",
+    "* Lists that are passed to a function can change inside that function\n",
     "   * even if a different variable name is used\n",
-    " * Similar to pointer passing in C\n",
+    "* Similar to pointer passing in C\n",
     "   * You have to make a deliberate copy to have non destructive passing"
    ]
   },
