--- a/LectureSeries-python2.ipynb
+++ b/LectureSeries-python2.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# \"This isn't normal [Python]... This is advanced [Python]\"\n",
+    "# \\`\\`This isn't normal [Python]... This is advanced [Python]\"\n",
     "\n",
     "## Lecture Series: Day 5\n",
     "### Nickalas Reynolds\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -82,18 +82,12 @@
      "text": [
       "[3, 6, 9]\n",
       "Lambda Functions\n",
-      "Object: <function <lambda> at 0x7efc180bf598>  With value at 3: 0\n",
+      "Object: <function <lambda> at 0x7f7e0997a6a8>  With value at 3: 0\n",
       "\n",
       "Direct Lambda Size:  136\n",
       "Functional Form 1:  136\n",
       "Functional Form 2:  136\n",
-      "Class Equivalent of lambda:  1056\n",
-      "Filter Function...\n",
-      "Object: <filter object at 0x7efc180c1048>  With value: [3, 6, 9]\n",
-      "Object: <filter object at 0x7efc180c1048>  With value: []\n",
-      "\n",
-      "Map function...\n",
-      "Object: <map object at 0x7efc180c1208>  With value: ['3', '6', '9']\n"
+      "Class Equivalent of lambda:  1056\n"
      ]
     }
    ],
@@ -126,8 +120,32 @@
     "print('Direct Lambda Size: ',sys.getsizeof((lambda x: x + n)))\n",
     "print('Functional Form 1: ',sys.getsizeof(lambda_transform))\n",
     "print('Functional Form 2: ',sys.getsizeof(func_transform))\n",
-    "print('Class Equivalent of lambda: ',sys.getsizeof(class_transform))\n",
-    "\n",
+    "print('Class Equivalent of lambda: ',sys.getsizeof(class_transform))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filter Function...\n",
+      "Object: <filter object at 0x7f7e0911d7f0>  With value: [3, 6, 9]\n",
+      "Object: <filter object at 0x7f7e0911d7f0>  With value: []\n",
+      "\n",
+      "Map function...\n",
+      "Object: <map object at 0x7f7e0911d0b8>  With value: ['3', '6', '9']\n"
+     ]
+    }
+   ],
+   "source": [
     "# filter\n",
     "print('Filter Function...')\n",
     "mod3 = filter(lambda x: x % 3 == 0, [1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
@@ -160,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -185,10 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -196,8 +214,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610] classic\n",
-      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765] interesting result, take time to checkout\n"
+      "[1, 1, 2, 3, 5] classic\n",
+      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55] interesting result, take time to checkout\n"
      ]
     }
    ],
@@ -223,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -241,11 +259,7 @@
       "Meta\n",
       "2\n",
       "0\n",
-      "\n",
-      "Object:\n",
-      " <function called.<locals>.returned at 0x7efc18980840> ... \n",
-      "Instantiate:\n",
-      "Hello!\n"
+      "\n"
      ]
     }
    ],
@@ -266,18 +280,40 @@
     "print('Meta')\n",
     "print(operate(inc,1))\n",
     "print(operate(dec,1))\n",
-    "print()\n",
-    "\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object:\n",
+      " <function outer.<locals>.inner at 0x7f7e0912f400> ... \n",
+      "Instantiate:\n",
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
     "# Nick what's the point?\n",
     "# 1 More example\n",
     "\n",
-    "def called():\n",
-    "    def returned():\n",
+    "def outer():\n",
+    "    def inner():\n",
     "        print('Hello!')\n",
-    "    return returned\n",
+    "    return inner\n",
     "\n",
     "\n",
-    "new = called()\n",
+    "new = outer()\n",
     "print('Object:\\n',new,'... \\nInstantiate:')\n",
     "new()"
    ]
@@ -300,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -349,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -389,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -441,19 +477,19 @@
     "# Classes\n",
     "---------------------\n",
     "### This is the most powerful feature of python\n",
-    "\n",
+    " * Classes group other objects of similar nature\n",
     " * What defines OOP\n",
     " * classes are abstract \n",
     " * Everything in python is an object and all objects have class `type`!\n",
     "\n",
     "Understanding classes is an important step in becoming an effective programmer.\n",
     "\n",
-    "Making an object from a class is called instantiation and we will be working with instances of that class."
+    "Making an object from a class is called instantiation and we will be working with instances of that class.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -461,43 +497,39 @@
    },
    "outputs": [],
    "source": [
+    "# class NameOfClass\n",
     "class Dog(object):\n",
-    "    \n",
-    "    def __init__(self,name,age):\n",
+    "    # Called on Instantiation or creation\n",
+    "    def __init__(self,name,age): # input variables\n",
     "        self.name = name\n",
     "        self.age = age\n",
-    "    \n",
+    "    #Methods\n",
     "    def roll_over(self):\n",
     "        print('{} rolls over!'.format(self.name))\n",
-    "        \n",
     "    def bark(self):\n",
     "        print('{} woofs!'.format(self.name))\n",
     "        \n",
     "class Cat(object):\n",
-    "    \n",
     "    def __init__(self, name, age):\n",
     "        self.name = name\n",
     "        self.age = age\n",
-    "        \n",
     "    def meow(self):\n",
     "        print(\"{} meows!\".format(self.name))\n",
     "        \n",
     "class Snake(object):\n",
-    "    \n",
     "    def __init__(self,name,age):\n",
     "        self.name = name\n",
     "        self.age = age\n",
-    "    \n",
     "    def slither(self):\n",
     "        print('{} sssssssssssssss!'.format(self.name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -507,16 +539,22 @@
      "text": [
       "Joe woofs!\n",
       "Bobby meows!\n",
-      "Ages: Joe is 20yrs and Bobby is 5yrs\n"
+      "Ages: Joe is 20yrs and Bobby is 5yrs\n",
+      "Lassie rolls over!\n"
      ]
     }
    ],
    "source": [
+    "# initialize\n",
     "x = Dog('Joe',20)\n",
     "y = Cat('Bobby',5)\n",
+    "#instantiate\n",
     "x.bark()\n",
     "y.meow()\n",
-    "print(f'Ages: {x.name} is {x.age}yrs and {y.name} is {y.age}yrs')"
+    "print(f'Ages: {x.name} is {x.age}yrs and {y.name} is {y.age}yrs')\n",
+    "# change name (poor puppers)\n",
+    "x.name = \"Lassie\"\n",
+    "x.roll_over()"
    ]
   },
   {
@@ -533,44 +571,7 @@
     "\n",
     "Note the 3 parameters of `__init__`: `self`, `name`, and `age`.  `self` is a required parameter in methods (by default) and it must come before all the others.  `self` is a reference to the instance itself.  Attributes are assigned to the instance by declaring `self` + the variable name (i.e. `self.name = name`).  Attributes are variables associated with an instance of a class.  They can, in turn, be accessed via `instance.attribute`.\n",
     "\n",
-    "Methods `roll_over` and `bark` don't do much now; they just issue print statements.  However one can imagine how these methods could be written to interact with a full program.\n",
-    "\n",
-    "Now let's create an instance of `Dog` and play around with its methods."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Spot rolls over!\n",
-      "Spot woofs!\n",
-      "Lassie rolls over!\n",
-      "Sir Pounce meows!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# instantiate\n",
-    "doge = Dog('Spot', 3)\n",
-    "doge.roll_over()\n",
-    "doge.bark()\n",
-    "\n",
-    "# change name (poor puppers)\n",
-    "doge.name = \"Lassie\"\n",
-    "doge.roll_over()\n",
-    "\n",
-    "# new kibben\n",
-    "kibben = Cat('Sir Pounce',3)\n",
-    "kibben.meow()"
+    "Methods `roll_over` and `bark` don't do much now; they just issue print statements.  However one can imagine how these methods could be written to interact with a full program."
    ]
   },
   {
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -673,6 +674,97 @@
     "kibben = Cat('Sir Pounce',3)\n",
     "kibben.meow()\n",
     "kibben.about()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Module Creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Importing Files\n",
+    "Assuming File is of layout:\n",
+    "\n",
+    "examples.py/\n",
+    " * function foo\n",
+    " * class foobar\n",
+    " * ```if __name__ == \"__main__\": ```\n",
+    "  * Define some testing parameters if code is explicitly called\n",
+    "  \n",
+    "#### Importing of files is easy `import examples`\n",
+    "#### or functions/classes `from examples import foo`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### So how do we make modules?\n",
+    "Very similar way\n",
+    "\n",
+    "We just have to tell python that we are importing a module and not just a file using `__init__.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "sound/            Top-level package\n",
+    " * `__init__.py`    Initialize the sound package\n",
+    " * formats/       Subpackage for file format conversions\n",
+    "  * `__init__.py`\n",
+    "  * wavread.py\n",
+    "  * wavwrite.py\n",
+    "  * aiffread.py\n",
+    "  * aiffwrite.py\n",
+    "  * auread.py\n",
+    "  * auwrite.py\n",
+    "  * ...\n",
+    " * effects/       Subpackage for sound effects\n",
+    "  * `__init__.py`\n",
+    "  * echo.py\n",
+    "  * surround.py\n",
+    "  * reverse.py\n",
+    "  * ...\n",
+    " * filters/      Subpackage for filters\n",
+    "  * `__init__.py`\n",
+    "  * equalizer.py\n",
+    "  * vocoder.py\n",
+    "  * karaoke.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Take a look at the example I provided as the module `nick`\n",
+    "## to Invoke, just do `python` then run `import nick`\n",
+    "## or you can execute the module as a file `python -m nick`"
    ]
   },
   {
@@ -723,24 +815,9 @@
     }
    },
    "source": [
-    "# Thank you for coming out\n",
     "## Slides are all on Github <nickalaskreynolds/LectureSeries>\n",
     "# Questions?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
