--- a/LectureSeries-python2.ipynb
+++ b/LectureSeries-python2.ipynb
@@ -82,12 +82,8 @@
      "text": [
       "[3, 6, 9]\n",
       "Lambda Functions\n",
-      "Object: <function <lambda> at 0x7f7e0997a6a8>  With value at 3: 0\n",
-      "\n",
-      "Direct Lambda Size:  136\n",
-      "Functional Form 1:  136\n",
-      "Functional Form 2:  136\n",
-      "Class Equivalent of lambda:  1056\n"
+      "Object: <function <lambda> at 0x7fe6e8b5bc80>  With value at 3: 0\n",
+      "\n"
      ]
     }
    ],
@@ -114,13 +110,7 @@
     "    def __init__(self,x):\n",
     "        self.x = x\n",
     "    def __call__(self,y):\n",
-    "        return self.x + y\n",
-    "\n",
-    "# size comparison\n",
-    "print('Direct Lambda Size: ',sys.getsizeof((lambda x: x + n)))\n",
-    "print('Functional Form 1: ',sys.getsizeof(lambda_transform))\n",
-    "print('Functional Form 2: ',sys.getsizeof(func_transform))\n",
-    "print('Class Equivalent of lambda: ',sys.getsizeof(class_transform))"
+    "        return self.x + y\n"
    ]
   },
   {
@@ -136,12 +126,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Direct Lambda Size:  136\n",
+      "Functional Form 1:  136\n",
+      "Functional Form 2:  136\n",
+      "Class Equivalent of lambda:  1056\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# size comparison\n",
+    "print('Direct Lambda Size: ',sys.getsizeof((lambda x: x + n)))\n",
+    "print('Functional Form 1: ',sys.getsizeof(lambda_transform))\n",
+    "print('Functional Form 2: ',sys.getsizeof(func_transform))\n",
+    "print('Class Equivalent of lambda: ',sys.getsizeof(class_transform))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Filter Function...\n",
-      "Object: <filter object at 0x7f7e0911d7f0>  With value: [3, 6, 9]\n",
-      "Object: <filter object at 0x7f7e0911d7f0>  With value: []\n",
+      "Object: <filter object at 0x7fe6e830d518>  With value: [3, 6, 9]\n",
+      "Object: <filter object at 0x7fe6e830d518>  With value: []\n",
       "\n",
       "Map function...\n",
-      "Object: <map object at 0x7f7e0911d0b8>  With value: ['3', '6', '9']\n"
+      "Object: <map object at 0x7fe6e830d5f8>  With value: ['3', '6', '9']\n"
      ]
     }
    ],
@@ -178,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -203,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -241,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -285,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -297,7 +316,7 @@
      "output_type": "stream",
      "text": [
       "Object:\n",
-      " <function outer.<locals>.inner at 0x7f7e0912f400> ... \n",
+      " <function outer.<locals>.inner at 0x7fe6e8300730> ... \n",
       "Instantiate:\n",
       "Hello!\n"
      ]
@@ -336,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -385,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -425,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -489,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -526,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -597,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -644,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
