--- a/LectureSeries.ipynb
+++ b/LectureSeries.ipynb
@@ -31,7 +31,9 @@
     "Our focus (in 2 hours):\n",
     " * Linux\n",
     " * Coding Practices and Principles\n",
-    " * Python and C++"
+    " * Python and C++\n",
+    " \n",
+    "As scientists we usually just need programming to manipulate and visualize data of some form."
    ]
   },
   {
@@ -313,13 +315,85 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Now to python itself"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Pointers \n",
+    "-----------\n",
+    "If you are used to pointers in C-varients, they don't directly exist in python. However, iterable objects act as pointers and the python conditional statement ``is`` is a pointer function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a(-6) is b(-6): False\n",
+      "a(0) is b(0): True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -6\n",
+    "b = -6\n",
+    "print(f'a({a}) is b({b}):', a is b)\n",
+    "\n",
+    "a = 0\n",
+    "b = 0\n",
+    "print(f'a({a}) is b({b}):', a is b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "# Functions\n",
     "---\n",
-    "Functions are named blocks of code. Once defined, they are called to execute their task. Functions are used when a particular task needs to be performed repeatedly. Functions make code easier to write, read, test, and fix."
+    "Functions are named blocks of code. Once defined, they are called to execute their task. Functions are used when a particular task needs to be performed repeatedly. Functions make code easier to write, read, test, and fix.\n",
+    "\n",
+    "Make up a bulk of python (between this and classes) and form the core of any OOP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "They are defined like this \n",
+    "* def function(arguments):\n",
+    "They are called like:\n",
+    "* function(arguments)\n",
+    "and can take positional arguments:\n",
+    "* function(arg1, arg2)\n",
+    "or keyword arguments\n",
+    "* function(arg2=20, arg10=0, arg1=None)"
    ]
   },
   {
@@ -358,14 +432,14 @@
     "    return x * x # equivalent to do x**2\n",
     "\n",
     "# calling the function\n",
-    "print('Calling squaring with complex (1j, 5) : ', squaring(1j, 5)) # j is complex\n",
-    "print('Calling squaring with complex (10j, 5): ', squaring(10j, 5)) # j is complex\n",
-    "print('Calling squaring with complex (1, 5j) : ', squaring(1, 5j)) # j is complex\n",
+    "print('Calling with complex (1j, 5) : ', squaring(1j, 5)) # j is complex\n",
+    "print('Calling with complex (10j, 5): ', squaring(10j, 5)) # j is complex\n",
+    "print('Calling with complex (1, 5j) : ', squaring(1, 5j)) # j is complex\n",
     "a = 50\n",
     "print('Before Function a=', a) \n",
-    "print('Calling squaring with single argument 2: ', squaring(2))\n",
+    "print('Calling with single argument 2: ', squaring(2))\n",
     "print('After Function a=', a) # notice prints the global a not relative\n",
-    "print('Calling squaring with no arguments (defaults): ', squaring())"
+    "print('Calling with no arguments (defaults): ', squaring())"
    ]
   },
   {
